results/SVCOMP/specgen/log-Verifier-2024_03_07_18_35_21.txt
import java.util.Random;

public final class Verifier {
  //@ requires condition;
  //@ ensures \result == true;
  public static void assume(boolean condition) {
    if (!condition) {
      Runtime.getRuntime().halt(1);
    }
  }

  //@ ensures \result == (new Random().nextBoolean());
  public static boolean nondetBoolean() {
    return new Random().nextBoolean();
  }

  //@ ensures \result == (byte) (new Random().nextInt());
  public static byte nondetByte() {
    return (byte) (new Random().nextInt());
  }

  //@ ensures \result == (char) (new Random().nextInt());
  public static char nondetChar() {
    return (char) (new Random().nextInt());
  }

  //@ ensures \result == (short) (new Random().nextInt());
  public static short nondetShort() {
    return (short) (new Random().nextInt());
  }

  //@ ensures \result == new Random().nextInt();
  public static int nondetInt() {
    return new Random().nextInt();
  }

  //@ ensures \result == new Random().nextLong();
  public static long nondetLong() {
    return new Random().nextLong();
  }

  //@ ensures \result == new Random().nextFloat();
  public static float nondetFloat() {
    return new Random().nextFloat();
  }

  //@ ensures \result == new Random().nextDouble();
  public static double nondetDouble() {
    return new Random().nextDouble();
  }

  //@ ensures \result != null && \result.length() >= 0;
  public static String nondetString() {
    Random random = new Random();
    int size = random.nextInt();
    assume(size >= 0);
    byte[] bytes = new byte[size];
    random.nextBytes(bytes);
    return new String(bytes);
  }
}
/home/max/Documents/JMLGPT/tmp/Verifier.java:5: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == true;
               ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:12: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (new Random().nextBoolean());
                          ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:17: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (byte) (new Random().nextInt());
                                 ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:22: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (char) (new Random().nextInt());
                                 ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:27: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (short) (new Random().nextInt());
                                  ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:32: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == new Random().nextInt();
                         ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:37: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == new Random().nextLong();
                         ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:42: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == new Random().nextFloat();
                         ^
/home/max/Documents/JMLGPT/tmp/Verifier.java:47: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == new Random().nextDouble();
                         ^
9 errors

import java.util.Random;

public final class Verifier {
  //@ requires condition;
  public static void assume(boolean condition) {
    if (!condition) {
      Runtime.getRuntime().halt(1);
    }
  }

  //@ ensures \result;
  public static boolean nondetBoolean() {
    return new Random().nextBoolean();
  }

  //@ ensures \result >= Byte.MIN_VALUE && \result <= Byte.MAX_VALUE;
  public static byte nondetByte() {
    return (byte) (new Random().nextInt());
  }

  //@ ensures \result >= Character.MIN_VALUE && \result <= Character.MAX_VALUE;
  public static char nondetChar() {
    return (char) (new Random().nextInt());
  }

  //@ ensures \result >= Short.MIN_VALUE && \result <= Short.MAX_VALUE;
  public static short nondetShort() {
    return (short) (new Random().nextInt());
  }

  //@ ensures true;
  public static int nondetInt() {
    return new Random().nextInt();
  }

  //@ ensures true;
  public static long nondetLong() {
    return new Random().nextLong();
  }

  //@ ensures true;
  public static float nondetFloat() {
    return new Random().nextFloat();
  }

  //@ ensures true;
  public static double nondetDouble() {
    return new Random().nextDouble();
  }

  //@ ensures \result != null && \result.length() >= 0;
  public static String nondetString() {
    Random random = new Random();
    int size = random.nextInt();
    assume(size >= 0);
    byte[] bytes = new byte[size];
    random.nextBytes(bytes);
    return new String(bytes);
  }
}
